--- a/examples/smoke/pyproject.toml
+++ b/examples/smoke/pyproject.toml
@@ -10,6 +10,14 @@ readme = "README.md"
 python = "^3.11"
 mypy = "^1.8.0"
 pydantic = "^2.5.3"
+boto3 = "^1.34.14"
+django = "^5.0.1"
+fastapi = "^0.108.0"
+pandas = "^2.1.4"
+pytest = "^7.4.4"
+requests = "^2.31.0"
+types-requests = "^2.31.0.20240106"
+numpy = "^1.26.3"
 
 
 [build-system]
@@ -24,3 +32,10 @@ warn_return_any = true
 exclude = [
     "bazel-*"
 ]
+
+# Ignore modules without type info
+[[tool.mypy.overrides]]
+module = [
+    "tzdata.*",
+]
+ignore_missing_imports = true
