--- a/examples/smoke/BUILD.bazel
+++ b/examples/smoke/BUILD.bazel
@@ -1,6 +1,5 @@
 load("@bazel_skylib//rules:build_test.bzl", "build_test")
 load("@rules_python//python:defs.bzl", "py_library")
-load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
 load("@rules_mypy//mypy:defs.bzl", "mypy_stdlib_cache")
 load("@pypi//:requirements.bzl", "requirement")
 
@@ -9,16 +8,10 @@ exports_files(["pyproject.toml"])
 mypy_stdlib_cache(
     name = "stdlib_cache",
     config = "//:pyproject.toml",
-    mypy = "//:mypy",
+    mypy = requirement("mypy"),
     plugins = [
         requirement("pydantic"),
     ],
-    visibility = ["//visibility:public"],
-)
-
-py_console_script_binary(
-    name = "mypy",
-    pkg = "@pypi//mypy",
     visibility = ["//visibility:public"],
 )
 
